--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Typing web application to track wpm",
   "main": "index.js",
   "scripts": {
+    "start": "webpack serve --config ./webpack.config.js --mode development",
     "build": "webpack --mode development",
     "server-dev": "npx nodemon --watch server server/index.js",
-    "client-dev": "npx webpack --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client-dev": "npx webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -21,8 +21,10 @@
   },
   "homepage": "https://github.com/JeromeMTR/Typo#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "nodemon": "^2.0.19",
     "pg": "^8.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -32,6 +34,8 @@
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
+    "dev-server": "^0.2.0",
     "eslint": "^8.21.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
@@ -39,7 +43,9 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   }
 }
