--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dev-server": "^0.2.0",
     "eslint": "^8.21.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.30.1",
