--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "nodemon": "^2.0.19",
     "pg": "^8.7.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "style-loader": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
