--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "random-words": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "style-loader": "^3.3.1"
   },
   "devDependencies": {
