--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/JeromeMTR/Typo#readme",
   "dependencies": {
     "axios": "^0.27.2",
+    "bluebird": "^3.7.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
